--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-Projects:
+<h3>Projects</h3>
 
-<a href="./project-03/ch05-proj1.html" rel="stylesheet">Project 3</a>
-
+<ol>
+<li><a href="./project-03/ch05-proj1.html">Project 3</a>
+</ol>
