--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <h3>Projects</h3>
 
 <ol>
+    <a href="./project-01/Fundamentals of Web Developemnt.html">Project 1</a>
+    <a href="./project-02/ch4-proj1.html">Project 2</a>
 <li><a href="./project-03/ch05-proj1.html">Project 3</a>
 </ol>
