updates for project 4

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <h3>Projects</h3>
 
 <ol>
-    <a href="./project-01/Fundamentals of Web Developemnt.html">Project 1</a>
-    <a href="./project-02/ch4-proj1.html">Project 2</a>
-<li><a href="./project-03/ch05-proj1.html">Project 3</a>
+<li> <a href="./project-01/Fundamentals of Web Developemnt.html">Project 1</a> </li>
+<li> <a href="./project-02/ch4-proj1.html">Project 2</a>  </li>
+<li> <a href="./project-03/ch05-proj1.html">Project 3</a> </li>
+<li> <a href="./project-04/ch08-proj1.html">Project 4</a> </li>
 </ol>
